Finish readme and final notebook cleanup

--- a/jupyter_notebooks/02 - ExploratoryDataAnalysis.ipynb
+++ b/jupyter_notebooks/02 - ExploratoryDataAnalysis.ipynb
@@ -22,16 +22,13 @@
         "## Inputs\n",
         "\n",
         "* Android_Malware.csv\n",
+        "* Android_Malware_converted.csv\n",
         "\n",
         "## Outputs\n",
         "\n",
         "* EDA_Report.html\n",
         "* EDA_Report_converted.html\n",
-        "* Android_Malware_converted.csv\n",
-        "\n",
-        "## Additional Comments\n",
-        "\n",
-        "* In case you have any additional comments that don't fit in the previous bullets, please state them here. \n"
+        "* Android_Malware_converted.csv"
       ]
     },
     {
@@ -281,7 +278,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "In this section, "
+        "In this section, the data is checked for a first overview of glaring issues that prevent correct use of the later. It is then prepared by fixing those issues. "
       ]
     },
     {
@@ -532,7 +529,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "In this section,"
+        "In this section, a correlation study is done to check the relation between the target variable and the features. It also allows to detect unneeded features, which can then be handled to balance the dataset."
       ]
     },
     {
@@ -589,20 +586,29 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# Explore Distributions by Target"
+        "# Explore Data Quality"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "In this section, "
+        "In this section, the general data quality is explored further by checking for distributions, missing values, outliers and skewness."
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
-      "source": []
+      "source": [
+        "## Distribution"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Plot the class distribution for the target variable"
+      ]
     },
     {
       "cell_type": "code",
@@ -630,21 +636,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "---"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "# Explore Data Quality"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "In this section, "
+        "## Missing Values"
       ]
     },
     {
@@ -662,6 +654,13 @@
       "source": [
         "missing = df_converted.isnull().sum()\n",
         "print(\"Missing values per column:\\n\", missing[missing > 0] if missing.any() else \"No missing values!\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Outliers"
       ]
     },
     {
@@ -697,6 +696,13 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "## Skewness"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "Check Skewness for numeric features"
       ]
     },
@@ -709,6 +715,20 @@
         "skewness = df_converted[numeric_cols].skew()\n",
         "print(\"\\nSkewness per numeric column:\")\n",
         "print(skewness)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "* The output shows a considerable amount of features with very high skewedness."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Further Distribution"
       ]
     },
     {
@@ -842,7 +862,13 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "* "
+        "* The EDA gave valuable insight into the dataset and its weaknesses.\n",
+        "* First preparation of the data was to convert all data types to numerical and to remove whitespace from labels to create consistent data.\n",
+        "* The class distribution shows imbalance with the target variable which should be adjusted before model training.\n",
+        "* The correlation study results can be further explored by removing features that show no correlation with the target variable.\n",
+        "* Missing values were found to be no too many and can be addressed when cleaning the data.\n",
+        "* The Pandas Profiling Report was saved in to versions, one for the raw dataset and one for the converted, to allow possible comparison. \n",
+        "* The next step is to start cleaning the data based on the now known issues."
       ]
     }
   ],
