--- a/jupyter_notebooks/03 - DataCleaning.ipynb
+++ b/jupyter_notebooks/03 - DataCleaning.ipynb
@@ -17,19 +17,15 @@
       "source": [
         "## Objectives\n",
         "\n",
-        "* Write here your notebook objective, for example, \"Fetch data from Kaggle and save as raw data\", or \"engineer features for modelling\"\n",
+        "* Given the results of the previous EDA, clean the data to solve issues and create a consistent and more balanced dataset for use in model training.\n",
         "\n",
         "## Inputs\n",
         "\n",
-        "* Write here which data or information you need to run the notebook \n",
+        "* Android_Malware_converted.csv\n",
         "\n",
         "## Outputs\n",
         "\n",
-        "* Write here which files, code or artefacts you generate by the end of the notebook \n",
-        "\n",
-        "## Additional Comments\n",
-        "\n",
-        "* In case you have any additional comments that don't fit in the previous bullets, please state them here. \n"
+        "* Android_Malware_cleaned.csv\n"
       ]
     },
     {
@@ -167,7 +163,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "In this section, "
+        "In this section, the data is cleaned based on the issues found in the EDA. Additional evaluations of the data is performed to get a deeper insight into how to handle the issues."
       ]
     },
     {
@@ -500,7 +496,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "* "
+        "* The data is now cleaned and ready to be used in feature engineering for training the model."
       ]
     }
   ],
