--- a/jupyter_notebooks/04 - FeatureEngineering.ipynb
+++ b/jupyter_notebooks/04 - FeatureEngineering.ipynb
@@ -17,19 +17,20 @@
       "source": [
         "## Objectives\n",
         "\n",
-        "* Write here your notebook objective, for example, \"Fetch data from Kaggle and save as raw data\", or \"engineer features for modelling\"\n",
+        "* Explore features in more detail and adjust for better data. Split prepared dataset into train and test sets. \n",
         "\n",
         "## Inputs\n",
         "\n",
-        "* Write here which data or information you need to run the notebook \n",
+        "* Android_Malware_cleaned.csv\n",
         "\n",
         "## Outputs\n",
         "\n",
-        "* Write here which files, code or artefacts you generate by the end of the notebook \n",
-        "\n",
-        "## Additional Comments\n",
-        "\n",
-        "* In case you have any additional comments that don't fit in the previous bullets, please state them here. \n"
+        "* Android_Malware_cleaned_features.csv\n",
+        "* X_train.csv\n",
+        "* X_test.csv\n",
+        "* y_train.csv\n",
+        "* y_test.csv\n",
+        "\n"
       ]
     },
     {
@@ -167,7 +168,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "In this section, "
+        "In this section, the previously cleaned data is explored further to decide how to use feature engineering to enhance the dataset. "
       ]
     },
     {
@@ -208,11 +209,6 @@
     {
       "cell_type": "markdown",
       "metadata": {},
-      "source": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
       "source": [
         "* Note: PPScore would have been great to include at this point, but due to dependency conflicts with the pandas version required to run either ppscore or feature-engine, this addition was skipped in favour of keeping feature-engine fully functional."
       ]
@@ -228,7 +224,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "In this section, "
+        "In this section, some feature engineering is performed to balance the data and prepare a good dataset to use for model training."
       ]
     },
     {
@@ -236,13 +232,6 @@
       "metadata": {},
       "source": [
         "## Drop Highly Correlated Features"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "* "
       ]
     },
     {
@@ -268,21 +257,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "* "
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
         "## Feature Importance"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "*"
       ]
     },
     {
@@ -318,13 +293,6 @@
         "\n",
         "# Show figure\n",
         "plt.show()"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "*"
       ]
     },
     {
@@ -380,7 +348,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "In this section, "
+        "In this section, the current cleaned dataset is split into train and test set to allow model training."
       ]
     },
     {
@@ -419,13 +387,6 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "*"
-      ]
-    },
-    {
-      "cell_type": "markdown",
       "metadata": {
         "id": "ltNetd085qHf"
       },
@@ -437,7 +398,8 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "* "
+        "* The cleaned dataset was further explored and adjusted slightly with feature engineering to keep the most meaningful features. \n",
+        "* The dataset was then split into train and test set which can be used for training in the next step. "
       ]
     }
   ],
