--- a/jupyter_notebooks/05 - ModelDevelopment.ipynb
+++ b/jupyter_notebooks/05 - ModelDevelopment.ipynb
@@ -17,19 +17,32 @@
       "source": [
         "## Objectives\n",
         "\n",
-        "* Write here your notebook objective, for example, \"Fetch data from Kaggle and save as raw data\", or \"engineer features for modelling\"\n",
+        "* Prepare data for train sets to handle imbalance and train models with adjusted datasets. Review model performance to choose the best performing model for predictions.\n",
         "\n",
         "## Inputs\n",
         "\n",
-        "* Write here which data or information you need to run the notebook \n",
+        "* X_train.csv\n",
+        "* X_test.csv\n",
+        "* y_train.csv\n",
+        "* y_test.csv\n",
+        "* default_best_model.pkl\n",
         "\n",
         "## Outputs\n",
         "\n",
-        "* Write here which files, code or artefacts you generate by the end of the notebook \n",
-        "\n",
-        "## Additional Comments\n",
-        "\n",
-        "* In case you have any additional comments that don't fit in the previous bullets, please state them here. \n"
+        "* X_train_scaled.csv\n",
+        "* X_test_scaled.csv\n",
+        "* y_train_resampled.csv\n",
+        "* X_train_resampled.csv\n",
+        "* model_training_results.csv\n",
+        "* model_tuning_results.csv\n",
+        "* best_model_fe_results.csv\n",
+        "* best_model_final_results.csv\n",
+        "* default_rf.pkl\n",
+        "* default_xgb.pkl\n",
+        "* tuned_rf.pkl\n",
+        "* tuned_xgb.pkl\n",
+        "* default_best_model.pkl\n",
+        "* feature_rf.pkl\n"
       ]
     },
     {
@@ -186,20 +199,15 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "In this section, "
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
         "## Handle Data Imbalance"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
-      "source": []
+      "source": [
+        "Resample datasets with SMOTE"
+      ]
     },
     {
       "cell_type": "code",
@@ -215,7 +223,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "* "
+        "Save resampled datasets"
       ]
     },
     {
@@ -246,7 +254,9 @@
     {
       "cell_type": "markdown",
       "metadata": {},
-      "source": []
+      "source": [
+        "Scale data with StandardScaler"
+      ]
     },
     {
       "cell_type": "code",
@@ -265,23 +275,18 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
       "metadata": {},
-      "outputs": [],
       "source": [
-        "print(\"✅ X_train_scaled:\", X_train_scaled.shape)\n",
-        "print(\"✅ y_train_resampled:\", y_train_resampled.shape)\n",
-        "print(\"✅ X_test_scaled:\", X_test_scaled.shape)\n",
-        "print(\"✅ y_test:\", y_test.shape)"
+        "* Scale X_train_resampled and X_test for Logistic Regression and LinearSVC\n",
+        "* Not for Random Forest or XGBoost, which are tree-based and scale-invariant"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "* Scale X_train_resampled and X_test for Logistic Regression and LinearSVC\n",
-        "* Not for Random Forest or XGBoost, which are tree-based and scale-invariant"
+        "Save scaled datasets"
       ]
     },
     {
@@ -310,7 +315,9 @@
     {
       "cell_type": "markdown",
       "metadata": {},
-      "source": []
+      "source": [
+        "Define helper function to collect results"
+      ]
     },
     {
       "cell_type": "code",
@@ -334,21 +341,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "* "
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
         "# Model Training"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "In this section, "
       ]
     },
     {
@@ -361,7 +354,9 @@
     {
       "cell_type": "markdown",
       "metadata": {},
-      "source": []
+      "source": [
+        "Define helper function for training and evaluation models"
+      ]
     },
     {
       "cell_type": "code",
@@ -414,13 +409,6 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "* "
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
         "## Train Multiple Models"
       ]
     },
@@ -466,20 +454,8 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "* "
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
         "## Save Model Training Results"
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": []
     },
     {
       "cell_type": "code",
@@ -494,13 +470,6 @@
         "\n",
         "df_training_results.to_csv(evaluation_path / \"model_training_results.csv\", index=False)\n",
         "print(\"📁 Results saved to model_training_results.csv\")"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "*"
       ]
     },
     {
@@ -533,21 +502,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "*"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
         "# Top Model Development"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "In this section, "
       ]
     },
     {
@@ -556,11 +511,6 @@
       "source": [
         "## Hyperparameter Tuning"
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": []
     },
     {
       "cell_type": "code",
@@ -613,13 +563,6 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "*"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
         "## Evaluate Results after Tuning"
       ]
     },
@@ -651,20 +594,8 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "* "
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
         "## Save Evaluation Results and Tuned Models"
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": []
     },
     {
       "cell_type": "code",
@@ -694,13 +625,6 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "* "
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
         "---"
       ]
     },
@@ -715,20 +639,8 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "In this section, "
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
         "## Save Best Performing Default Model"
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": []
     },
     {
       "cell_type": "code",
@@ -749,20 +661,8 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "*"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
         "## Check Feature Importance"
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": []
     },
     {
       "cell_type": "code",
@@ -801,13 +701,6 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "* "
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
         "## Advanced Feature Engineering"
       ]
     },
@@ -836,20 +729,8 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "* "
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
         "## Retrain Default Best Model with Advanced Feature Engineering"
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": []
     },
     {
       "cell_type": "code",
@@ -912,13 +793,6 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "*"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
         "Save feature engineered rf model "
       ]
     },
@@ -955,20 +829,8 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "In this section, "
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
         "# Evaluate Final Model with Original Test Set"
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": []
     },
     {
       "cell_type": "markdown",
@@ -985,13 +847,6 @@
       "source": [
         "model_path = project_root / \"outputs\" / \"ml_pipeline\" / \"default_best_model.pkl\"\n",
         "defaul_best_model = joblib.load(model_path)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "*"
       ]
     },
     {
@@ -1059,13 +914,6 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "* "
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
         "---"
       ]
     },
@@ -1082,7 +930,11 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "* "
+        "* Multiple models were trained to be able to choose the best performing one\n",
+        "* Two top classification models were chosen for hyperparameter tuning\n",
+        "* The rain forest model has the best performance and was chosen as the best model\n",
+        "* Additional feature engineering worsened to model performance, so the best model was not tuned further\n",
+        "* The best model was kept for use in predictions"
       ]
     }
   ],
