--- a/jupyter_notebooks/06 - ModelEvaluation.ipynb
+++ b/jupyter_notebooks/06 - ModelEvaluation.ipynb
@@ -17,19 +17,29 @@
       "source": [
         "## Objectives\n",
         "\n",
-        "* Write here your notebook objective, for example, \"Fetch data from Kaggle and save as raw data\", or \"engineer features for modelling\"\n",
+        "* Compare best model performance against the test set\n",
         "\n",
         "## Inputs\n",
         "\n",
-        "* Write here which data or information you need to run the notebook \n",
+        "* model_training_results.csv\n",
+        "* model_tuning_results.csv\n",
+        "* best_model_fe_results.csv\n",
+        "* best_model_final_results.csv\n",
+        "* X_train_scaled.csv\n",
+        "* X_test_scaled.csv\n",
+        "* y_train_resampled.csv\n",
+        "* X_train_resampled.csv\n",
+        "* X_train.csv\n",
+        "* X_test.csv\n",
+        "* y_train.csv\n",
+        "* y_test.csv\n",
+        "* default_best_model.pkl\n",
         "\n",
         "## Outputs\n",
         "\n",
-        "* Write here which files, code or artefacts you generate by the end of the notebook \n",
-        "\n",
-        "## Additional Comments\n",
-        "\n",
-        "* In case you have any additional comments that don't fit in the previous bullets, please state them here. \n"
+        "* models_{metric}_stage_comparison.png\n",
+        "* final_model_confusion_matrix.png\n",
+        "* final_feature_importances.png\n"
       ]
     },
     {
@@ -177,13 +187,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "In this section, "
-      ]
-    },
-    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
@@ -206,13 +209,6 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "* "
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
         "---"
       ]
     },
@@ -221,13 +217,6 @@
       "metadata": {},
       "source": [
         "# Visualisations"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "In this section, "
       ]
     },
     {
@@ -254,11 +243,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": []
-    },
-    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
@@ -282,20 +266,8 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "* "
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
         "## Plot Confusion Matrix for Final Model"
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": []
     },
     {
       "cell_type": "code",
@@ -325,19 +297,9 @@
     {
       "cell_type": "markdown",
       "metadata": {},
-      "source": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
       "source": [
         "## Plot Feature Importance for Final Model"
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": []
     },
     {
       "cell_type": "code",
@@ -377,14 +339,19 @@
         "id": "ltNetd085qHf"
       },
       "source": [
-        "# Conclusion and Next Steps"
+        "# Conclusion"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "* "
+        "* Model performance dropped significantly when compared against the test set.\n",
+        "* This is highly likely due to the high imbalance of the raw data / test set.\n",
+        "* Model performs with 45% balanced accuracy on the balanced train set, which is not enough to meet business requirements.\n",
+        "* For running predictions on the streamlit dashboard, the model is kept to display functionality and purpose.\n",
+        "* Model can not be used accurately with new unseen and raw data input and is therefore not usable in a real world application.\n",
+        "* As this is a portfolio project, the model was kept and used to demonstrate machine learning functionality and predictions."
       ]
     }
   ],
